# tehdb

./: Cargo.toml  README  README.md
benches/: insert_many_rows.rs
src/: database.rs
