[package]
name = "tehsplay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
bincode = "1.3.3"
bytemuck = { version = "1.12.1", features = ["derive"] }
byteorder = "1.4.3"
serde = { version = "1.0.145", features = ["derive"] }
serde_arrays = "0.1.0"
serde_json = "1.0.86"
smallvec = { version = "1.10.0", features = ["serde"] }
thiserror = "1.0.37"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
tempfile = "3.3.0"

[[bench]]
name = "insert_many_rows"
harness = false
